data/issues_raw/buildinstall/buildinstall_train_9752.txt
contrib/verbs causes compile error on master

Recently merged RDMA-supporting feature is based on r1.0, and incompatible with the latest master.

ERROR: /data/chuangchen/workspace/tensorflow/tensorflow/contrib/verbs/BUILD:104:1: C++ compilation of rule '//tensorflow/contrib/verbs:rdma_rendezvous_mgr' failed: crosstool_wrapper_driver_is_not_gcc failed: error executing command external/local_config_cuda/crosstool/clang/bin/crosstool_wrapper_driver_is_not_gcc -U_FORTIFY_SOURCE '-D_FORTIFY_SOURCE=1' -fstack-protector -fPIE -Wall -Wunused-but-set-parameter ... (remaining 151 argument(s) skipped): com.google.devtools.build.lib.shell.BadExitStatusException: Process exited with status 1.
tensorflow/contrib/verbs/rdma_rendezvous_mgr.cc: In constructor 'tensorflow::RdmaRemoteRendezvous::RdmaRemoteRendezvous(const tensorflow::WorkerEnv*, tensorflow::int64, tensorflow::RdmaMgr*)':
tensorflow/contrib/verbs/rdma_rendezvous_mgr.cc:34:35: error: 'worker_name' was not declared in this scope
: BaseRemoteRendezvous(env, worker_name, step_id, true),
^
tensorflow/contrib/verbs/rdma_rendezvous_mgr.cc: In constructor 'tensorflow::RdmaRendezvousMgr::RdmaRendezvousMgr(const tensorflow::WorkerEnv*, const string&, tensorflow::WorkerCacheInterface*)':
tensorflow/contrib/verbs/rdma_rendezvous_mgr.cc:139:41: error: no matching function for call to 'tensorflow::BaseRendezvousMgr::BaseRendezvousMgr(const tensorflow::WorkerEnv*&, const string&)'
: BaseRendezvousMgr(env, worker_name) {}
^
tensorflow/contrib/verbs/rdma_rendezvous_mgr.cc:139:41: note: candidate is:
In file included from ./tensorflow/contrib/verbs/rdma_rendezvous_mgr.h:22:0,
from tensorflow/contrib/verbs/rdma_rendezvous_mgr.cc:18:
./tensorflow/core/distributed_runtime/base_rendezvous_mgr.h:62:12: note: tensorflow::BaseRendezvousMgr::BaseRendezvousMgr(const tensorflow::WorkerEnv*)
explicit BaseRendezvousMgr(const WorkerEnv* worker_env);
^
./tensorflow/core/distributed_runtime/base_rendezvous_mgr.h:62:12: note:   candidate expects 1 argument, 2 provided
Target //tensorflow/tools/pip_package:build_pip_package failed to build
Use --verbose_failures to see the command lines of failed build steps.